fix: gif doesn't want to align in the center

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
-img {
-    text-align: center;
+.echelon img{
+    display:block;
+    margin: 0 auto;
 }
-
+    
 .lists li ,
 .echelon h1 {
     text-align: center;
